--- a/static/hw/sta210-hw.css
+++ b/static/hw/sta210-hw.css
@@ -93,7 +93,7 @@ strong {
 code {
 	font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	font-size: 16px;
-	line-height: 1.6;
+	/*line-height: 1.6; */
 }
 
 pre {
