--- a/public/labs/sta210-labs.css
+++ b/public/labs/sta210-labs.css
@@ -93,8 +93,8 @@ strong {
 
 code {
 	font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	font-size: 16px;
-	/*line-height: 1.6;*/
+	font-size: 17px;
+	line-height: 1.6;
 }
 
 pre {
