--- a/public/hw/sta210-hw.css
+++ b/public/hw/sta210-hw.css
@@ -6,6 +6,9 @@
 
 /* Tufte CSS styles */
 
+html {
+	font-size: 17px;
+}
 
 body {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -13,7 +16,11 @@ body {
 	background-color: #fefefe;
 	color: #222;
 	counter-reset: li;
-	font-size: 16px;
+	font-size: 17px;
+}
+
+p {
+  font-size: 17px;
 }
 
 h1.title {
@@ -74,13 +81,7 @@ strong {
 
 /* Code formatting */
 
-/* @media screen and (max-width: 760px) {
-	pre {
-		width: 100%;
-		font-size: 15px;
-	}
-}
-*/
+
 
 @media screen and (max-width: 760px) {
 	pre {
@@ -92,8 +93,8 @@ strong {
 
 code {
 	font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	font-size: 16px;
-	/*line-height: 1.6; */
+	font-size: 17px;
+	line-height: 1.6;
 }
 
 pre {
@@ -108,6 +109,7 @@ pre {
  	word-break: normal;
  	word-wrap: normal;
 }
+
 
 
 pre.r {
