--- a/static/quiz/sta210-quiz.css
+++ b/static/quiz/sta210-quiz.css
@@ -1,27 +1,26 @@
 /* * Customizing tufte.css * */
 
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700';
-@import 'https://fonts.googleapis.com/css?family=Source+Code+Pro';
-
+@import 'https://fonts.googleapis.com/css?family=Source+Code+Pro'; 
 @charset "UTF-8";
 
 /* Tufte CSS styles */
 
 html {
-  font-size: 13pt;
-}
-
-p {
-	font-size: 13pt;
+	font-size: 17px;
 }
 
 body {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 350;
+	font-weight: 400;
 	background-color: #fefefe;
 	color: #222;
 	counter-reset: li;
-	font-size: 13pt;
+	font-size: 17px;
+}
+
+p {
+  font-size: 17px;
 }
 
 h1.title {
@@ -43,10 +42,9 @@ h2 {
 	color: #008eaa;
 }
 
-h3 {
-	font-family: 'Source Sans Pro', sans-serif;
+h3.subtitle {
+	font-style: normal;
 	color: #008eaa;
-	font-weight: 400;
 }
 
 h4 {
@@ -61,17 +59,17 @@ h4 {
 h4.author,
 h4.date {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 300;
+	font-weight: 350;
 }
 
 .numeral {
 	font-family: "Source Sans Pro";
-	font-weight: 300;
+	font-weight: 350;
 }
 
 em {
 	font-style: italic;
-	font-weight: 300;
+	font-weight: 350;
 	font-family: "Source Sans Pro";
 }
 
@@ -83,44 +81,56 @@ strong {
 
 /* Code formatting */
 
+
+
 @media screen and (max-width: 760px) {
 	pre {
 		width: 100%;
-		font-size: 16px;
+		font-size: 15px;
+     	overflow-x: auto;
 	}
 }
 
 code {
 	font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	font-size: 15px;
+	font-size: 17px;
 	line-height: 1.6;
 }
 
-pre code {
-	font-size: 15px;
+pre {
+	background-color: #FFFFFF;
+	/*border-color: #CCCCCC;*/
+	/*border-style: solid;*/
+	border-width: 0px;
+  border-radius: 4px;*/
+  overflow-x: auto;
+ 	padding: 1em;
+ 	white-space: inherit;
+ 	word-break: normal;
+ 	word-wrap: normal;
 }
+
+
+
+pre.r {
+	background-color: #F5F5F5;	
+	/*border-color: #CCCCCC*/
+	 white-space: inherit;
+}
+
 
 .marginnote code,
 .sidenote code {
-	font-size: 1rem;
+	font-size: 14px;
 }
 
-.marginnote{
-  font-size: 13px;
-}
 
-pre {
-		width: 100%;
-		font-size: 16px;
-		overflow-x: auto;
-}
 
 /* Exercise counter */
 
 ol {
 	/* Remove the default left padding */
 	padding-left: 0;
-	font-size: 13pt;
 }
 
 ol>li {
@@ -131,11 +141,9 @@ ol>li {
 	width: 90%;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	padding-right: 0;
-	padding-left: 90px;
-	font-size: 13pt;
+	padding-right: 0px;
+	padding-left: 110px;
 }
-
 
 ol>li:before {
 	/* Use the counter as content */
@@ -143,23 +151,39 @@ ol>li:before {
 	/* Increment the counter by 1 */
 	counter-increment: li;
 	position: absolute;
-	color: #339898;
+	color: #008eaa;
 	left: -0.5px;
 	font-weight: bold;
+	margin-right: 10px;
 }
 
-ol ol>li:before {
-	counter-reset: sub-item;
-		/* Use the counter as content */
-	/* Increment the counter by 1 */
-	position: absolute;
-	color: #339898;
-	left: -0.5px;
-	font-weight: bold;
-	padding-left: 90px;
+ol ul {
+  width: 92%;
 }
 
-.td {
-  font-size: 10pt;
+ol ol {
+	counter-reset: subitem;
 }
 
+td {
+  font-size: 15px;
+}
+
+/*Style for the Footer*/
+
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: #7C878E;
+  font-size: 14px;
+}
+
+/*Commit message*/
+
+div .commit {
+  font-size: 16px;
+  font-weight: 400;
+  color: #aa008e;
+  text-decoration: italic;
+}
