add monday slides

--- a/static/slides/sta210-slides.css
+++ b/static/slides/sta210-slides.css
@@ -110,6 +110,7 @@ li{
 .large { font-size: 120% }
 .midi { font-size: 90% }
 .small { font-size: 80% }
+.tiny {font-size: 70%}
 
 img, video, iframe {
   max-width: 100%;
