--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -57,7 +57,7 @@
             {{- end }}
             
                {{- if .project }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/project/{{ .project }}/">
+            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/project/{{ .project }}">
                     <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
