update main and primary accent.

--- a/public/css/sta210.css
+++ b/public/css/sta210.css
@@ -117,7 +117,7 @@ div.tagline {
   font-size: 1.3em !important;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #008EAA;
+  color: FFEEFF;
 }
 
 #homeContent .band.first .blurb div.tagline {
