--- a/themes/hugo-tourmaline/static/css/main-site.css
+++ b/themes/hugo-tourmaline/static/css/main-site.css
@@ -114,11 +114,11 @@ html, body {
   margin: 30px 0 30px 0; }
 
 a {
-  color: #4c83b6;
+  color: #871d89;
   text-decoration: none;
   cursor: pointer; }
   a:hover {
-    color: #42709b;
+    color: #871d89;
     text-decoration: underline; }
 
 a.iconLink {
@@ -126,7 +126,7 @@ a.iconLink {
   line-height: 40px;
   padding-left: 24px;
   text-decoration: none;
-  color: #4c83b6;
+  color: #871d89;
   background-repeat: no-repeat;
   background-position: left center;
   background-size: 20px 20px;
@@ -136,7 +136,7 @@ a.iconLink {
     text-decoration: underline; }
 
 a {
-  color: #38577f; }
+  color: #871d89; }
 
 .productLogo {
   display: inline-block;
