--- a/public/slides/sta210-slides.css
+++ b/public/slides/sta210-slides.css
@@ -33,7 +33,7 @@ h1, h3 {
 
 a, a > code {
   font-family: 'Open Sans', sans-serif;
-  color: #008eaa;
+  color: #799100;
   text-decoration: underline;
   font-weight: bold;
   font-size: 90%;
